# stm32f7-dsp-experiments

./: .gitignore
Drivers/BSP/STM32746G-Discovery/: stm32746g_discovery_audio.h  stm32746g_discovery_lcd.h
Drivers/STM32F7xx_HAL_Driver/STM32F7xx_HAL_Driver/: STM32F7xx_HAL_Driver.project
Projects/STM32746G-Discovery/audio/GCC/: Makefile
Projects/STM32746G-Discovery/audio/Inc/: stm32f7xx_it.h
Projects/STM32746G-Discovery/audio/Src/: main.c
Projects/STM32746G-Discovery/rms_mono/GCC/: CMakeCache.txt  CMakeLists.txt  Makefile
Projects/STM32746G-Discovery/rms_mono/GCC/cmake/: FindSTM32CUBE.cmake  gcc_arm_cortex.cmake  gcc_stm32f7.cmake
Projects/STM32746G-Discovery/rms_mono/Inc/: lcd_log_conf.h
Projects/STM32746G-Discovery/rms_mono/Src/: main.c  stm32f7xx_it.c  syscalls.c
Projects/STM32746G-Discovery/rms_mono_codelite/CODELITE/: CMakeCache.txt  CMakeLists.txt  rms_mono.project  rms_mono.workspace
Projects/STM32746G-Discovery/rms_mono_codelite/CODELITE/.codelite/: rms_mono.session
Projects/STM32746G-Discovery/rms_mono_codelite/Inc/: main.h
Projects/STM32746G-Discovery/rms_mono_codelite/Src/: main.c
Projects/STM32746G-Discovery/rms_mono_newmake/GCC/: Makefile
Projects/STM32746G-Discovery/rms_mono_newmake/Inc/: stm32f7xx_hal_conf.h
Projects/STM32746G-Discovery/rms_stereo/GCC/: Makefile
Projects/STM32746G-Discovery/rms_stereo/Inc/: main.h
Projects/STM32746G-Discovery/rms_stereo/Src/: main.c  stm32f7xx_it.c
Projects/STM32746G-Discovery/scope_stereo/GCC/: Makefile
Projects/STM32746G-Discovery/scope_stereo/Src/: main.c  stm32f7xx_it.c
