CMAKE_MINIMUM_REQUIRED(VERSION 2.8) 

SET(CHIP "STM32F746NG" CACHE STRING "Chip part number")

LIST(APPEND CMAKE_MODULE_PATH "./cmake/")
INCLUDE(gcc_arm_cortex)

FIND_PACKAGE(STM32CUBE)

PROJECT(rms-mono)
ENABLE_LANGUAGE(ASM)

GET_FILENAME_COMPONENT(PROJECT_ROOT "../" ABSOLUTE)
GET_FILENAME_COMPONENT(BUILD_ROOT "./" ABSOLUTE)

INCLUDE_DIRECTORIES(
    ${PROJECT_ROOT}/Inc
    ${STM32CUBE_INC_DIRS}
)

FILE(GLOB C_SOURCE_FILES "${PROJECT_ROOT}/Src/*.c")

SET(PROJECT_SOURCES
    ${C_SOURCE_FILES}
)

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}.elf ${PROJECT_SOURCES}) 

ARM_SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME}.elf)
ARM_ADD_HEX_BIN_TARGETS(${CMAKE_PROJECT_NAME}.elf)

